crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__code__unreachable.snap
---
source: crates/dora-compiler/src/wasm/tests/code.rs
expression: op
snapshot_kind: text
---
module {
  func.func @dummy(%arg0: !llvm.ptr) {
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    return
  }
  func.func @dummy3(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32, %arg3: i32) {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    %c1_i64_1 = arith.constant 1 : i64
    %2 = llvm.alloca %c1_i64_1 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg3, %2 : i32, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    return
  }
  func.func @f2(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f3(%arg0: !llvm.ptr) -> i64 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i64):  // no predecessors
    return %0 : i64
  }
  func.func @f4(%arg0: !llvm.ptr) -> f32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: f32):  // no predecessors
    return %0 : f32
  }
  func.func @f5(%arg0: !llvm.ptr) -> f64 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: f64):  // no predecessors
    return %0 : f64
  }
  func.func @f6(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f7(%arg0: !llvm.ptr) -> i32 {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f8(%arg0: !llvm.ptr) {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f9(%arg0: !llvm.ptr) -> i32 {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f10(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f11(%arg0: !llvm.ptr) -> i32 {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f12(%arg0: !llvm.ptr) {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  ^bb1:  // pred: ^bb2
    return
  ^bb2:  // no predecessors
    cf.br ^bb1
  }
  func.func @f13(%arg0: !llvm.ptr) -> i32 {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f14(%arg0: !llvm.ptr) -> i32 {
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    %c1_i32 = arith.constant 1 : i32
    cf.br ^bb2(%c1_i32 : i32)
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // pred: ^bb0
    cf.br ^bb1(%1 : i32)
  }
  func.func @f15(%arg0: !llvm.ptr) -> i32 {
    cf.br ^bb3
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  ^bb3:  // pred: ^bb0
    "wasm.unreachable"() : () -> ()
  }
  func.func @f16(%arg0: !llvm.ptr) -> i32 {
    cf.br ^bb3
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  ^bb3:  // pred: ^bb0
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  }
  func.func @f17(%arg0: !llvm.ptr) {
    cf.br ^bb3
  ^bb1:  // pred: ^bb2
    return
  ^bb2:  // no predecessors
    cf.br ^bb1
  ^bb3:  // pred: ^bb0
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    "wasm.unreachable"() : () -> ()
  }
  func.func @f18(%arg0: !llvm.ptr) -> i32 {
    cf.br ^bb4
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // 2 preds: ^bb3, ^bb4
    cf.br ^bb1(%1 : i32)
  ^bb3(%2: i32):  // no predecessors
    cf.br ^bb2(%2 : i32)
  ^bb4:  // pred: ^bb0
    call @dummy(%arg0) : (!llvm.ptr) -> ()
    %c1_i32 = arith.constant 1 : i32
    cf.br ^bb2(%c1_i32 : i32)
  }
  func.func @f19(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f20(%arg0: !llvm.ptr) {
    "wasm.unreachable"() : () -> ()
  ^bb1:  // pred: ^bb2
    return
  ^bb2:  // no predecessors
    cf.br ^bb1
  }
  func.func @f21(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f22(%arg0: !llvm.ptr) -> i32 {
    %c6_i32 = arith.constant 6 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f23(%arg0: !llvm.ptr) {
    "wasm.unreachable"() : () -> ()
  ^bb1:  // pred: ^bb2
    return
  ^bb2:  // no predecessors
    cf.br ^bb1
  }
  func.func @f24(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f25(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // pred: ^bb3
    cf.br ^bb1(%1 : i32)
  ^bb3(%2: i32):  // no predecessors
    cf.br ^bb2(%2 : i32)
  }
  func.func @f26(%arg0: !llvm.ptr) -> i32 {
    %c6_i32 = arith.constant 6 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f27(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // pred: ^bb2
    return %0 : i32
  ^bb2(%1: i32):  // no predecessors
    cf.br ^bb1(%1 : i32)
  }
  func.func @f28(%arg0: !llvm.ptr) -> i64 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i64):  // no predecessors
    return %0 : i64
  }
  func.func @f29(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f30(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    %2 = llvm.load %0 : !llvm.ptr -> i32
    %c0_i32 = arith.constant 0 : i32
    %3 = arith.cmpi ne, %2, %c0_i32 : i32
    cf.cond_br %3, ^bb2, ^bb3
  ^bb1(%4: i32):  // pred: ^bb4
    return %4 : i32
  ^bb2:  // pred: ^bb0
    "wasm.unreachable"() : () -> ()
  ^bb3:  // pred: ^bb0
    %5 = llvm.load %1 : !llvm.ptr -> i32
    cf.br ^bb4(%5 : i32)
  ^bb4(%6: i32):  // pred: ^bb3
    cf.br ^bb1(%6 : i32)
  }
  func.func @f31(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    %2 = llvm.load %0 : !llvm.ptr -> i32
    %c0_i32 = arith.constant 0 : i32
    %3 = arith.cmpi ne, %2, %c0_i32 : i32
    cf.cond_br %3, ^bb2, ^bb3
  ^bb1(%4: i32):  // pred: ^bb4
    return %4 : i32
  ^bb2:  // pred: ^bb0
    %5 = llvm.load %1 : !llvm.ptr -> i32
    cf.br ^bb4(%5 : i32)
  ^bb3:  // pred: ^bb0
    "wasm.unreachable"() : () -> ()
  ^bb4(%6: i32):  // pred: ^bb2
    cf.br ^bb1(%6 : i32)
  }
  func.func @f32(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    %2 = llvm.load %0 : !llvm.ptr -> i32
    %c0_i32 = arith.constant 0 : i32
    %3 = arith.cmpi ne, %2, %c0_i32 : i32
    cf.cond_br %3, ^bb2, ^bb3
  ^bb1(%4: i32):  // pred: ^bb4
    return %4 : i32
  ^bb2:  // pred: ^bb0
    "wasm.unreachable"() : () -> ()
  ^bb3:  // pred: ^bb0
    cf.br ^bb4
  ^bb4:  // pred: ^bb3
    %5 = llvm.load %1 : !llvm.ptr -> i32
    cf.br ^bb1(%5 : i32)
  }
  func.func @f33(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    "wasm.unreachable"() : () -> ()
  ^bb1(%2: i32):  // no predecessors
    return %2 : i32
  }
  func.func @f34(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    %2 = llvm.load %0 : !llvm.ptr -> i32
    "wasm.unreachable"() : () -> ()
  ^bb1(%3: i32):  // no predecessors
    return %3 : i32
  }
  func.func @f35(%arg0: !llvm.ptr) -> i32 {
    %c0_i32 = arith.constant 0 : i32
    %c1_i32 = arith.constant 1 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f36(%arg0: !llvm.ptr) {
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f37(%arg0: !llvm.ptr) {
    %c1_i32 = arith.constant 1 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f38(%arg0: !llvm.ptr) {
    %c1_i32 = arith.constant 1 : i32
    %c2_i32 = arith.constant 2 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f39(%arg0: !llvm.ptr) {
    %cst = arith.constant 0.000000e+00 : f32
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x f32 : (i64) -> !llvm.ptr
    llvm.store %cst, %0 : f32, !llvm.ptr
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f40(%arg0: !llvm.ptr) -> f32 {
    %cst = arith.constant 0.000000e+00 : f32
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x f32 : (i64) -> !llvm.ptr
    llvm.store %cst, %0 : f32, !llvm.ptr
    "wasm.unreachable"() : () -> ()
  ^bb1(%1: f32):  // no predecessors
    return %1 : f32
  }
  func.func @f41(%arg0: !llvm.ptr) -> f32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: f32):  // no predecessors
    return %0 : f32
  }
  func.func @f42(%arg0: !llvm.ptr) -> f32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: f32):  // no predecessors
    return %0 : f32
  }
  func.func @f43(%arg0: !llvm.ptr) -> i64 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i64):  // no predecessors
    return %0 : i64
  }
  func.func @f44(%arg0: !llvm.ptr) {
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f45(%arg0: !llvm.ptr) {
    %c2_i32 = arith.constant 2 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f46(%arg0: !llvm.ptr) {
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f47(%arg0: !llvm.ptr) {
    %c2_i32 = arith.constant 2 : i32
    "wasm.unreachable"() : () -> ()
  ^bb1:  // no predecessors
    return
  }
  func.func @f48(%arg0: !llvm.ptr) -> f32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: f32):  // no predecessors
    return %0 : f32
  }
  func.func @f49(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f50(%arg0: !llvm.ptr) -> i64 {
    %c10_i64 = arith.constant 10 : i64
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i64):  // no predecessors
    return %0 : i64
  }
  func.func @f51(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f52(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f53(%arg0: !llvm.ptr) -> i32 {
    %cst = arith.constant 1.09261619E+9 : f32
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f54(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
  func.func @f55(%arg0: !llvm.ptr) -> i32 {
    "wasm.unreachable"() : () -> ()
  ^bb1(%0: i32):  // no predecessors
    return %0 : i32
  }
}
